Initial test system implementation plus small refactoring of includes in main library

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(ownDesLibrary C)
 
 include_directories(include)
-set(SOURCES src/des_context.c src/des_encryptor.c)
+set(SOURCES src/des_context.c src/des_encryptor.c src/des_decryptor.c)
 add_library(ownDes ${SOURCES})
