--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,1 +1,12 @@
 project(ownDesLibraryTests C)
+
+enable_testing()
+
+# Includes
+include_directories(include ../lib/include)
+
+# Tests executables
+add_executable(des_simple_test algorithmic/des_simple_test.c utils/utils.c)
+
+# Tests dependencies
+target_link_libraries(des_simple_test ownDes)
