Small fix for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,9 @@ set(CMAKE_C_STANDARD 11)
 
 enable_testing()
 
+# Adding test system parts
 add_subdirectory(lib)
 add_subdirectory(tests)
+
+# Adding tests
+add_test(NAME "DES simple algorithmic test" COMMAND des_simple_test)
